<resources>
    <string name="app_name">CoffeeLovers</string>
    <string name="name">Coffee Lovers</string>
    <string name="email">Почта*</string>
    <string name="forget">Забыли пароль?</string>
    <string name="made">Создать аккаунт?</string>
    <string name="Memory">Запомнить меня?</string>
    <string name="coffee">Приложение для любителей насладиться безграничным вкусом кофе.</string>
    <string name="todo">TODO</string>
    <string name="password">Пароль*</string>
    <string name="show">Показать больше</string>
    <string name="email_">bolotbekova_a@auca.kg</string>
    <string name="todo57">TODO</string>
    <string name="Todo">TODO</string>
    <string name="O">или</string>
    <string name="share">Share</string>
    <string name="skip">Skip</string>
    <string name="history">history of coffee.</string>
    <string name="story"><![CDATA[Лишь вXII веке из сырых кофейных зёрен стали готовить напиток, а ещё столетия спустя начали срывать плоды с кофейных деревьев, сушить зёрна, обжаривать и измельчать, а получившийся порошок заливать горячей водой. Арабы добавляли в него различные пряности — имбирь, корицу. Также смешивали напиток с молоком.]]></string>
    <string name="text3">В начале XX века немецкий химик Эрдманн выделил из зёрен кофе масло, придающее кофе его аромат, которое он назвал «кафеоль». Эрдманну удалось выделить порядка десяти компонентов кафеоля. В 1967 году американские учёные Ф. Готши и М. Уинтергод с помощью молекулярной дистилляции, спектрофотометрии и газовой хроматографии выделили более 220 компонентов</string>
    <string name="todoo1">TODO</string>
    <string name="skip2">Skip</string>
    <string name="todo2">TODO</string>
    <string name="recipe"><![CDATA[Инструкция приготовления: 5 минут 1. Насыпать в термос растворимый кофе и сахар, залить теплой водой, закрыть термос и немного потрясти, чтобы все перемешалось. 2. В стакан положить лед, залить кофе. 3. Добавить молока. По желанию добавить сливок несладких сливок или мороженое.]]></string>
    <string name="skip3">Skip</string>
    <string name="todoo4">TODO</string>
    <string name="todoo5">TODO</string>
    <string name="todoo6">TODO</string>
    <string name="todoo7">TODO</string>
    <string name="todoo8">TODO</string>
    <string name="todoo9">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="recipe2">/1. В глубокую миску для взбивания добавить сахар и кофе, влить воду, перемешать. 2. Взбивать смесь миксером или ручным венчиком до получения однородного крема карамельного (светло-коричневого) цвета, напоминающего мусс. Точное время зависит от растворимого кофе, обычно 3-7 минут. Корейцы считают, что для правильной пены требуется не меньше 400 движений венчиком. 3. В стакан для подачи (или чашку) налить холодное молоко, по желанию добавить лед. 4. Сверху на молоко ложкой выложить кофейную пену. 5. Перед первым глотком смешать пену с молоком.</string>
    <string name="todo25">TODO</string>
    <string name="todo26">TODO</string>
    <string name="skip4">Skip</string>
    <string name="recipe4">1. Налить молоко в кастрюлю, добавить корицу, варить на слабом огне 5 минут, не доводя до кипения. 2. Заварить кофе в воде любым способом (желательно в турке) и процедить от гущи в случае необходимости. 3. Перелить кофе в чашку для подачи, добавить сахар, перемешать. 4. Влить в кофе молоко с корицей. Перемешать, дать настояться 1-2 минуты.</string>
    <string name="todo33">TODO</string>
    <string name="todo34">TODO</string>
    <string name="todo35">TODO</string>
    <string name="todo36">TODO</string>
    <string name="todo37">TODO</string>
    <string name="skip8">Skip</string>
    <string name="todo39">TODO</string>
    <string name="todo40">TODO</string>
    <string name="todo43">TODO</string>
    <string name="todo49">TODO</string>
    <string name="todo50">TODO</string>
    <string name="todo52">TODO</string>
    <string name="todo61">TODO</string>
    <string name="todo62">TODO</string>
    <string name="todo63">TODO</string>
    <string name="recipe9">В этом приложении собрана информация о кофе, а также описаны различные способы приготовления. Также, Вы лично можете поделиться своим рецептом вместе со всеми нами.</string>
    <string name="todo91">TODO</string>
    <string name="todo92">TODO</string>
    <string name="todo93">TODO</string>
    <string name="passwords">10101010</string>
    <string name="editTextTextEmailAddress">Text</string>
</resources>
