<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page6">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="224dp"
        android:layout_height="347dp"
        android:layout_marginStart="79dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/how_to_make_dalgona_coffee__the_pillowy_beverage_all_the_cool_kids_are_making"
        android:contentDescription="@string/todo23" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:srcCompat="@drawable/dalgona_coffee_"
        android:contentDescription="@string/todo22" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/component_7"
        android:contentDescription="@string/todo24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="381dp"
        android:layout_height="187dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="14dp"
        android:text="@string/recipe2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/component_13"
        android:contentDescription="@string/todo25" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="17dp"
        android:background="@color/white"
        android:text="@string/skip4"
        android:textColor="#4C3E2A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="72dp"
        android:layout_height="23dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="65dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/component_19"
        android:contentDescription="@string/todo26" />

</androidx.constraintlayout.widget.ConstraintLayout>