<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFB099"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="198dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="197dp"
        android:text="@string/history"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#716554"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="235dp"
        android:layout_height="259dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="91dp"
        android:contentDescription="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unknown_3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="254dp"
        android:layout_height="173dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:text="@string/story"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/white"
        android:text="@string/skip"
        android:textColor="#63543E"
        android:textStyle="bold"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="66dp"
        android:layout_height="20dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="167dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/component_19" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="82dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/component_16" />

</androidx.constraintlayout.widget.ConstraintLayout>